gitops/resources/cicd/nexus2/dc1/nexus-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 4m
    template.openshift.io/expose-uri: http://{.spec.host}{.spec.path}
  labels:
    app: nexus
  name: nexus
  namespace: cicd
spec:
  host: nexus-cicd.apps.testcluster6.openshift.iets.com
  port:
    targetPort: 8081-tcp
  to:
    kind: Service
    name: nexus
    weight: 100
  wildcardPolicy: None
status:
  ingress: []
